--- a/books/templates/books/about.html
+++ b/books/templates/books/about.html
@@ -1,9 +1,9 @@
 {% extends 'books/base.html' %}
 
 {% block content %}
-<div class="container mt-5">
-  <div class="row">
-    <div class="col-lg-8 mx-auto">
+<div class="container mt-5 bg-body-secondary border border-3 border-black rounded-4">
+  <div class="row p-4 ">
+    <div class="col-lg-8 mx-auto text-center">
       <h1 class="display-4">About OnBook</h1>
 
       <p class="lead">OnBook is a dynamic online platform dedicated to book enthusiasts. Our mission is to provide an
