--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -2,105 +2,74 @@
 {% load static %}
 {% block content %}
 <!-- Search and Filter Form -->
-<form method="get" action="{% url 'book_list' %}">
-  <input type="text" name="q" placeholder="Search for books..." value="{{ request.GET.q }}">
-
-  <!-- Dropdown for Authors -->
-  <select name="author">
-    <option value="">--Filter by Author--</option>
-    {% for author in authors %}
-    <option value="{{ author }}" {% if request.GET.author == author %}selected{% endif %}>{{ author }}</option>
-    {% endfor %}
-  </select>
-
-  <!-- Dropdown for Publishers -->
-  <select name="publisher">
-    <option value="">--Filter by Publisher--</option>
-    {% for publisher in publishers %}
-    <option value="{{ publisher }}" {% if request.GET.publisher == publisher %}selected{% endif %}>{{ publisher }}
-    </option>
-    {% endfor %}
-  </select>
-
-  <!-- Dropdown for Categories -->
-  <select name="category">
-    <option value="">--Select Category--</option>
-    {% for category, category_display in categories.items %}
-    <option value="{{ category }}" {% if request.GET.category == category %}selected{% endif %}>{{ category_display }}
-    </option>
-    {% endfor %}
-  </select>
-
-  <button type="submit" class="btn btn-primary">Search</button>
-</form>
-
-<!-- Book List Table -->
-<!-- <div>
-  <h2>Manage Books</h2>
-  <div class="table-responsive">
-    <table class="table table-bordered text-center align-middle">
-      <thead>
-        <tr>
-          <th>Cover</th>
-          <th>Book Name</th>
-          <th>Author</th>
-          <th>Publisher</th>
-          <th>Category</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for book in books %}
-        <tr>
-          <td class="align-middle">
-            {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" alt="{{ book.name }}" class="img-fluid"
-              style="max-height: 100px; max-width: 100px;">
-            {% else %}
-            <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image" class="img-fluid">
-            {% endif %}
-          </td>
-          <td class="align-middle">{{ book.name }}</td>
-          <td class="align-middle">{{ book.author }}</td>
-          <td class="align-middle">{{ book.publisher }}</td>
-          <td class="align-middle">{{ book.category }}</td>
-          <td class="align-middle">
-            <a href="{% url 'book_detail' book.id %}" class="btn btn-secondary">View Book</a>
-          </td>
-        </tr>
-        {% empty %}
-        <tr>
-          <td colspan="4">No books available.</td>
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-
-</div> -->
-<h2>Our Collection</h2>
-{% for book in books %}
-<div class="card">
-  <div class="face front">
-    {% if book.cover_image %}
-    <img src="{{ book.cover_image.url }}" alt="{{ book.name }}" class="img-fluid">
-    {% else %}
-    <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image" class="img-fluid">
-    {% endif %}
-  </div>
-  <div class="face back">
-    <h3>{{ book.name }}</h3>
-    <h4>{{ book.author }}</h4>
-    <div class="link">
-      <a href="{% url 'book_detail' book.id %}" class="btn btn-secondary">View Book</a>
-    </div>
+<div class="container border border-black">
+  <div class="row w-100 p-2 pt-3">
+    <h3 class="text-center">Search and Filter</h3>
+    <form method="get" action="{% url 'book_list' %}" class="d-flex flex-column justify-content-center flex-lg-row flex-lg-wrap">
+      <div class="mb-3">
+        <input type="text" name="q" placeholder="Search for books..." value="{{ request.GET.q }}" class="form-control">
+      </div>
+      <!-- Dropdown for Authors -->
+      <div class="mb-3">
+        <select name="author" class="form-select">
+          <option value="">--Filter by Author--</option>
+          {% for author in authors %}
+          <option value="{{ author }}" {% if request.GET.author == author %}selected{% endif %}>{{ author }}</option>
+          {% endfor %}
+        </select>
+      </div>
+      <!-- Dropdown for Publishers -->
+      <div class="mb-3">
+        <select name="publisher" class="form-select">
+          <option value="">--Filter by Publisher--</option>
+          {% for publisher in publishers %}
+          <option value="{{ publisher }}" {% if request.GET.publisher == publisher %}selected{% endif %}>{{ publisher }}
+          </option>
+          {% endfor %}
+        </select>
+      </div>
+      <!-- Dropdown for Categories -->
+      <div class="mb-3">
+        <select name="category" class="form-select">
+          <option value="">--Select Category--</option>
+          {% for category, category_display in categories.items %}
+          <option value="{{ category }}" {% if request.GET.category == category %}selected{% endif %}>{{ category_display }}
+          </option>
+          {% endfor %}
+        </select>
+      </div>
+      <div class="mb-3 col-12 text-center">
+        <button type="submit" class="btn btn-primary btn-block m-2">Search</button>
+        <a href="{% url 'book_list' %}" class="btn btn-success btn-block m-2">Clear</a>
+      </div>
+    </form>
   </div>
 </div>
-
-{% endfor %}
-
+<h2 class="text-center mt-4">Our Collection</h2>
+<div class="row">
+  {% for book in books %}
+  <div class="col-12 col-md-6 col-lg-4 d-flex flex-column justify-content-center flex-md-row flex-md-wrap">
+    <div class="home-card m-2 mt-md-3">
+      <div class="face front">
+        {% if book.cover_image %}
+        <img src="{{ book.cover_image.url }}" alt="{{ book.name }}" class="img-fluid">
+        {% else %}
+        <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image" class="img-fluid">
+        {% endif %}
+      </div>
+      <div class="face back">
+        <h3>{{ book.name }}</h3>
+        <h4>{{ book.author }}</h4>
+        <div class="link">
+          <a href="{% url 'book_detail' book.id %}" class="btn btn-secondary">View Book</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  {% endfor %}
+</div>
 <!-- Pagination Links -->
-<div class="pagination justify-content-center">
+<div class="pagination justify-content-center mt-3">
   <span class="step-links">
     {% if page_obj.has_previous %}
     <a href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}" class="btn btn-primary">first</a>
@@ -108,15 +77,15 @@
       class="btn btn-primary">previous</a>
     {% endif %}
 
-    <span class="current">
-      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+    <span class="current mx-3">
+      Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
     </span>
 
     {% if page_obj.has_next %}
     <a href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
-      class="btn btn-primary">next</a>
+      class="btn btn-primary ">next</a>
     <a href="?page={{ page_obj.paginator.num_pages }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}"
-      class="btn btn-primary">last</a>
+      class="btn btn-primary ">last</a>
     {% endif %}
   </span>
 </div>
