--- a/static/main.css
+++ b/static/main.css
@@ -12,7 +12,7 @@
 
 :root {
   --bg-dark: #966C47;
-  --bg-light: bisque;
+  --bg-light: white;
   --container-light: #6085A6;
   --container-dark: #2C75DB;
   --border: #038282;
@@ -67,8 +67,8 @@
 }
 
 body{
-  background-color: var(--bg-light);
-  color: var(--text-dark);
+  background-color: whitesmoke;
+  color: black;
   margin-top: 5.1rem;
 }
 
@@ -76,7 +76,9 @@ main{
   min-height: 100vh; /* Ajusta esto según tus necesidades */
   padding-bottom: 6rem; /* Espacio adicional para el footer */
 }
-  
+
+
+
   /* Containers */
   .content-section {
     background: var(--container-light);
@@ -134,21 +136,7 @@ main{
     font-size: 2.5rem;
   } */
 
-  /* Carrousel */
 
-/* Estilos personalizados para el carrusel */
-#bookCarousel {
-  background-color: black; /* Fondo gris para el contenedor */
-}
-
-#bookCarousel .carousel-inner {
-  text-align: center; /* Centrar el contenido */
-}
-
-#bookCarousel .carousel-item img {
-  max-width: 100%; /* Asegurarse de que las imágenes no se desborden */
-  margin: 0 auto; /* Centrar horizontalmente las imágenes */
-}
 
 
 /*--------------------------------------------- Messagin app----------------------------------- */
@@ -212,72 +200,98 @@ main{
 
 /* --------------------------------------------------Home */
 
-/* Cards */
-
-.card{
-  position: relative;
-  width: 18.75rem;
-  height: 21.875rem;
-  margin: 1.25rem;
+.home_container{
+  background-color: whitesmoke;
+  color: black;
 }
 
-.card .face{
+  /* Carrousel */
+
+/* Estilos personalizados para el carrusel */
+#bookCarousel {
+  background-color: black; /* Fondo gris para el contenedor */
+}
+
+#bookCarousel .carousel-inner {
+  text-align: center; /* Centrar el contenido */
+}
+
+#bookCarousel .carousel-item img {
+  max-width: 100%; /* Asegurarse de que las imágenes no se desborden */
+  margin: 0 auto; /* Centrar horizontalmente las imágenes */
+}
+
+
+/* Cards */
+
+.home-card{
+  position: relative;
+  width: 20.625rem;
+  height: 31.25rem;
+  background-color: whitesmoke;
+  border: none;
+}
+
+.home-card .face{
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   border-radius: .625rem;
   overflow: hidden;
-  transition: .5s;
+  transition: all 1s;
 }
 
-.card .front{
+.home-card .front{
   transform: perspective(37.5rem) rotateY(0deg);
   box-shadow: 0 .3125rem .625rem #000;
 }
 
-.card .front img{
+.home-card .front img{
   position: absolute;
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
 
-.card .back{
+.home-card .back{
   transform: perspective(37.5rem) rotateY(180deg);
-  background: rgb(3, 35, 54);
+  background: black;
   padding: .9375rem;
-  color: #f3f3f3;
+  color: white;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   text-align: center;
   box-shadow: 0 .3125rem .625rem #000;
+  transition: all 1s;
 }
 
-.card .back .link{
+.home-card .back .link{
   border-top: solid 1px #f3f3f3;
   height: 3.125rem;
   line-height: 3.125rem;
 }
 
-.card .back .link a{
+.home-card .back .link a{
   color: #f3f3f3;
 }
 
-.card .back h3,h4{
-  font-size: 1.875rem;
+.home-card .back h3,h4{
+  font-size: 1rem;
   margin-top: 1.25rem;
   letter-spacing: .125rem;
 }
 
-.card:hover .front{
+.home-card:hover .front{
   transform: perspective(37.5rem) rotateY(180deg);
 }
 
-.card:hover .back{
+.home-card:hover .back{
   transform: perspective(37.5rem) rotateY(360deg);
 }
+
+
 /* Table description responsive */
 
 .desc-limited {
@@ -302,15 +316,8 @@ main{
 
 /* ------------------------------------------------------------------------- FOOTER -------------------------------------------------------------------------  */
 
-footer {
-  margin-top: 6rem;
-  background-color: var(--bg-dark);
-  color: var(--title-color);
-}
-
 .social_icon {
   border-radius: 50%;
-  background-color: var(--bg-dark);
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -325,7 +332,7 @@ footer {
 }
 
 .github_icon i {
-  color: #171515;
+  color: white;
 }
 
 .youtube_icon i {
@@ -333,7 +340,7 @@ footer {
 }
 
 .social_icon:hover {
-  transform: scale(1.2);
-  filter: brightness(1.2) saturate(1.5);
+  transform: scale(1.8);
+  filter: brightness(2) saturate(2);
 }
 
