--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,24 +1,24 @@
 {% extends "books/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="content-section">
+<div class="content-section mt-5 p-2">
     <form method="POST">
         {% csrf_token %}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Login</legend>
+            <legend class="border-bottom mb-4 text-center">Login</legend>
 
             {{ form|crispy }}
         </fieldset>
-        <div class="form-group">
-            <button class="btn btn-outline-info" type="submit">Login</button>
-            <small class="text-muted ml-2">
-                <a href="{% url 'password_reset' %}">Forgot Password?</a>
+        <div class="form-group m-3">
+            <button class="btn btn-primary" type="submit">Login</button>
+            <small class="text-muted ms-2">
+                <a href="{% url 'password_reset' %}" class="btn btn-danger">Forgot Password?</a>
             </small>
         </div>
     </form>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need An Account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+            Need An Account? <a class="ms-2 btn btn-success" href="{% url 'register' %}">Sign Up Now</a>
         </small>
     </div>
 </div>
