--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -3,8 +3,8 @@
 {% load static %}
 {% block content %}
 
-<div class="container mt-4">
-  <div class="row">
+<div class="container mt-4 border border-3 border-black rounded-4 bg-body-secondary">
+  <div class="row p-4">
     <!-- Link to edit profile -->
     <div class="col-md-4">
       <div class="card mb-4">
@@ -13,7 +13,7 @@
           <div class="media-body">
             <h2 class="account-heading">{{ user.username }}</h2>
             <p class="text-secondary">{{ user.email }}</p>
-            <a href="{% url 'edit_profile' %}" class="btn btn-outline-info">Edit Profile</a>
+            <a href="{% url 'edit_profile' %}" class="btn btn-info">Edit Profile</a>
             <a href="{% url 'delete_user' user.id %}" class="btn btn-danger">Delete Account</a>
           </div>
           {% if unread_messages_count > 0 %}
