--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -27,7 +27,7 @@
 
 <body>
   <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
+    <nav class="navbar navbar-expand-md bg-primary fixed-top">
       <div class="container">
         <a class="navbar-brand mr-4" href="{% url 'blog-home' %}">Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
@@ -39,7 +39,7 @@
             <a class="nav-item nav-link" href="{% url 'books_home' %}">OnBook</a>
           </div>
           <!-- Navbar Right Side -->
-          <div class="navbar-nav">
+          <div class="navbar-nav ms-auto">
             {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="{% url 'post-create' %}">New Post</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
