--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -25,7 +25,7 @@
   <meta name="author" content="Pedro Olivares">
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
   <header class="site-header">
     <nav class="navbar navbar-expand-md bg-black fixed-top ">
       <div class="container ">
@@ -65,11 +65,10 @@
       </div>
       </div>
     </nav>
-
   </header>
-  <main role="main" class="container mb-3	">
+  <main role="main" class="container flex-grow-1">
     <div class="row">
-      <div class="col-12">
+      <div class="col-12 mx-auto">
         {% if messages %}
         {% for message in messages %}
         <div class="alert alert-{{ message.tags }}">
@@ -79,10 +78,8 @@
         {% endif %}
         {% block content %}{% endblock %}
       </div>
-
-  </main>
-
-  <footer class="footer mt-auto py-3 text-center bg-black">
+    </main>
+  <footer class="footer py-3 text-center bg-black">
     <div class="container text-white">
       <div class="row">
         <!-- Slogan -->
