--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -32,6 +32,7 @@
         <div class="mt-md-4 mt-3">
           <h2 class="text-center">Discover Our Collection</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+          <img src="{% static 'images/assets/girl-3528292_640.webp' %}" class="img-thumbnail" alt="Woman reading on a river side">
         </div>
         <div class="text-center">
           <a href="{% url 'book_list' %}" class="btn btn-primary mx-auto my-3">View All Books</a>
@@ -39,10 +40,11 @@
       </div>
     </div>
   </div>
-  <div class="container mt-4 p-3">
+  <div class="container mt-4 p-3 mb-3">
     <div class="col-lg-12 text-center">
       <h2 class="text-center my-3">Discover Our Universe</h2>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ex, ullam voluptas mollitia tempore, quasi magnam eos provident officiis dolor quisquam debitis aut adipisci? Sit mollitia sint eum laboriosam eius?</p>
+      <img src="{% static 'images/assets/reading-5069826_640.webp' %}" class="img-thumbnail" alt="Child reading on the bed">
     </div>
   </div>
 </div>
