--- a/messaging/templates/messaging/inbox.html
+++ b/messaging/templates/messaging/inbox.html
@@ -1,33 +1,49 @@
 {% extends "books/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
+
 {% block content %}
-<h2>Inbox</h2>
+<!-- Main container for inbox layout -->
+<div class="container py-5 bg-body-secondary border border-2 rounded-2">
+	<h2 class="mb-4 text-center">Inbox</h2>
 
-<!-- Form to start a new conversation -->
-<div class="container">
-    <h3>Start a New Conversation</h3>
-    <form method="post" action="{% url 'start_conversation' %}">
-        {% csrf_token %}
-        <div class="mb-3">
-            <select class="form-select" name="recipient">
-                {% for user in all_users %}
-                <option value="{{ user.id }}">{{ user.username }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <button type="submit" class="btn btn-primary">Start Conversation</button>
-    </form>
-</div>
+	<!-- Section for starting a new conversation -->
+	<div class="bg-light p-3 p-md-4 rounded-3 shadow-sm">
+		<h3 class="text-center">Start a New Conversation</h3>
+		<form method="post" action="{% url 'start_conversation' %}" class="row g-3">
+			{% csrf_token %}
+			<!-- Form field for selecting a recipient -->
+			<div class="col-12 text-center">
+				<label for="recipientSelect" class="form-label ">Select User</label>
+				<select class="form-select" name="recipient" id="recipientSelect">
+					{% for user in all_users %}
+					<option value="{{ user.id }}">{{ user.username }}</option>
+					{% endfor %}
+				</select>
+			</div>
+			<!-- Button to submit the form -->
+			<div class="col-12 text-center">
+				<button type="submit" class="btn btn-primary">Start Conversation</button>
+			</div>
+		</form>
+	</div>
 
-<div class="list-group mt-3">
-    <!-- Display users with conversations -->
-    <h3>Open Conversations</h3>
-    {% for user in users_with_conv %}
-    <a href="{% url 'conversation' user.id %}" class="list-group-item list-group-item-action">
-        {{ user.username }}
-    </a>
-    {% empty %}
-    <p>No conversations yet.</p>
-    {% endfor %}
+	<!-- List of open conversations -->
+	<div class="mt-4">
+		<h3 class="text-center">Open Conversations</h3>
+		<div class="list-group">
+			{% for user in users_with_conv %}
+			<!-- Link to open a conversation with a user -->
+			<a href="{% url 'conversation' user.id %}"
+				class="list-group-item list-group-item-action d-flex justify-content-between align-items-center">
+				{{ user.username }}
+				<small class="text-muted">Click to chat</small>
+			</a>
+			{% empty %}
+			<!-- Message displayed if there are no conversations -->
+			<p class="text-muted">No conversations yet.</p>
+			{% endfor %}
+		</div>
+	</div>
 </div>
 {% endblock %}
