--- a/messaging/templates/messaging/send_message.html
+++ b/messaging/templates/messaging/send_message.html
@@ -1,14 +1,25 @@
 {% extends "books/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 
 {% block content %}
-<div class="container">
-    <h2>Send Message to {{ receiver.username }}</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Send</button>
-        <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel</button>
-    </form>
+
+<div class="container message-container rounded-2 my-3">
+	<div class="message-box p-2 rounded-2">
+		<h2 class="mb-4 text-center">Message to <span class="text-uppercase">{{ receiver.username }}</span></h2>
+		<form method="post" class="needs-validation" novalidate>
+			{% csrf_token %}
+			{% for field in form.visible_fields %}
+			<div class="mb-3">
+				{{ field|as_crispy_field }}
+			</div>
+			{% endfor %}
+			<!-- Action buttons for the form -->
+			<div class="d-grid gap-2 d-md-flex justify-content-md-center">
+				<button type="submit" class="btn btn-primary">Send</button>
+				<button class="btn btn-success" type="button" onclick="history.back()">Cancel</button>
+			</div>
+		</form>
+	</div>
 </div>
 {% endblock %}
