--- a/static/main.css
+++ b/static/main.css
@@ -67,14 +67,12 @@
 }
 
 body{
-  background-color: whitesmoke;
+  background: radial-gradient(circle at 50% 50%, rgba(255, 235, 59, 1) 20%, rgba(3, 169, 244, 1) 80%);
   color: black;
-  margin-top: 5.1rem;
 }
 
 main{
-  min-height: 100vh; /* Ajusta esto según tus necesidades */
-  padding-bottom: 6rem; /* Espacio adicional para el footer */
+  margin-top: 5rem;
 }
 
 
@@ -89,7 +87,7 @@ main{
     color:var(--text-color)
   }
   
-  /* .article-title {
+  .article-title {
     color: #444444;
   }
   
@@ -134,41 +132,88 @@ main{
   
   .account-heading {
     font-size: 2.5rem;
-  } */
+  }
 
+/*---------------------------------------- Logout */
 
+.logout-container{
+  margin-top: 1rem;
+  margin-bottom: 1.2rem;
+  background-image: url('images/assets/books-2596809_640.webp');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 30rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.logout-content{
+  width:  70%;
+  height: 15rem;
+  background: rgba(252, 250, 250, 0.808);
+}
 
 /*--------------------------------------------- Messagin app----------------------------------- */
 
-  .messages {
-    background-color: #428bca;
-    border-radius: 1rem;
-    min-height: 650px;
-    padding: 1.2rem;
+.conversation-container{
+  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
+}
+
+.messages {
+  background-color: #428bca;
+  border-radius: 1rem;
+  min-height: 650px;
+  padding: 1.2rem;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+}
+
+.sent-message, .received-message {
+  width: 50%;
+  display: flex;
+  flex-direction: column; 
+  align-items: center; 
+  margin: 1rem;
+  padding: 1rem;
+  border-radius: 3rem;
 }
 
 .sent-message {
-    width: 50%;
-    text-align: center;
-    background-color: #DCF8C6; /* Light green background for sent messages */
-    padding: .7rem;
-    padding-left: 3rem;
-    margin: 1rem;
-    margin-right: 50%;
-    border-radius: 3rem;
+  background-color: #DCF8C6;
+  margin-left: 0;
+  margin-right: auto;
 }
 
 .received-message {
-    width: 50%;
-    text-align: center;
-    background-color: #ECE5DD; /* Light gray background for received messages */
-    padding: .7rem;
-    padding-right: 3rem;
-    margin: 1rem;
-    margin-left: 50%;
-    border-radius: 3rem;
+  background-color: #ECE5DD;
+  margin-right: 0; 
+  margin-left: auto; 
 }
+
+/* Send Message */
+.custom-textarea {
+  resize: none; 
+  width: 100%; 
+}
+
+.message-container {
+  background: linear-gradient(90deg, rgba(255, 235, 59, 1) 0%, rgba(3, 169, 244, 1) 100%);
+  min-height: 80vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message-box {
+  background: radial-gradient(circle at 50% 50%, rgba(255, 235, 59, 1) 20%, rgba(233, 30, 99, 1) 80%);
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  width: 100%;
+  max-width: 600px;
+}
+
 
 /*----------------------------------------------- Profile--------------------------------------- */
 
@@ -344,3 +389,20 @@ main{
   filter: brightness(2) saturate(2);
 }
 
+
+/* ----------------------------------------------------------large screens------------------------------------------------------------ */
+@media only screen and (min-width: 768px){ 
+  /*---------------------------------------- Logout */
+
+  .logout-container{
+    margin-top: 1rem;
+    margin-bottom: 1.2rem;
+    height: 58rem;
+
+  }
+
+.logout-content{
+  width:  30%;
+  height: 30%;
+}
+}
