--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,4 +1,5 @@
 {% extends "books/base.html" %}
+{% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
 <div class="content-section mt-5 p-2">
