--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,16 +1,13 @@
 {% extends "books/base.html" %}
+{% load static %}
 {% block content %}
-<div class="container text-center border-black border-4 rounded-2">
-    <div class="div">
-        <h2>You have been logged out</h2>
-    </div>
-    <div class="border-top pt-3">
-        <p>
-            We look forward to seeing you soon.
-        </p>
-        <p class="text-muted">
-            Login again <a href="{% url 'login' %}">Sign In</a>
-        </p>
-    </div>
+<div class="d-flex align-items-center justify-content-center logout-container">
+  <div class="text-center border border-black border-1 rounded-2 p-4 logout-content ">
+    <h2 class="mt-2 fs-3 fw-bolder">You have been logged out</h2>
+    <p class="mt-2 fs-4 ">We look forward to seeing you soon.</p>
+    <p >
+      <a href="{% url 'login' %}" class="btn btn-primary ms-2">Login again</a>
+    </p>
+  </div>
 </div>
 {% endblock content %}
