--- a/books/templates/books/about.html
+++ b/books/templates/books/about.html
@@ -1,7 +1,7 @@
 {% extends 'books/base.html' %}
 
 {% block content %}
-<div class="container mt-5 bg-body-secondary border border-3 border-black rounded-4">
+<div class="container mt-5 mb-3 border border-3 border-black rounded-4 about-container">
   <div class="row p-4 ">
     <div class="col-lg-8 mx-auto text-center">
       <h1 class="display-4">About OnBook</h1>
@@ -10,11 +10,11 @@
         accessible and enjoyable reading experience for all our users.</p>
 
       <h2 class="mt-4">What We Offer</h2>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">A vast collection of books across various genres.</li>
-        <li class="list-group-item">User-friendly book rental and purchase options.</li>
-        <li class="list-group-item">A personalized reading experience with recommendations and reviews.</li>
-        <li class="list-group-item">Community engagement through our blog and discussion forums.</li>
+      <ul class=" list-group about-container-offer ">
+        <li class="list-group-item ">A vast collection of books across various genres.</li>
+        <li class="list-group-item ">User-friendly book rental and purchase options.</li>
+        <li class="list-group-item ">A personalized reading experience with recommendations and reviews.</li>
+        <li class="list-group-item ">Community engagement through our blog and discussion forums.</li>
       </ul>
 
       <h2 class="mt-4">Our Vision</h2>
