--- a/static/main.css
+++ b/static/main.css
@@ -75,6 +75,22 @@ main{
   margin-top: 5rem;
 }
 
+/* Navbar */
+
+.navbar-nav .nav-link,
+.navbar .dropdown-item{
+  transition: all .6s;
+}
+
+.navbar-nav .nav-link:hover{
+  color: red;
+  transform: scale(1.2);
+}
+
+
+.navbar .dropdown-item:hover{
+  color: red;
+}
 
 
   /* Containers */
@@ -134,6 +150,20 @@ main{
     font-size: 2.5rem;
   }
 
+/* About */
+
+.about-container{
+  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
+}
+
+.about-container-offer{
+  background: linear-gradient(90deg, rgba(255, 235, 59, 1) 0%, rgba(3, 169, 244, 1) 100%);
+}
+
+.about-container-offer .list-group-item{
+  background-color: transparent;
+  border: none;
+}
 /*---------------------------------------- Logout */
 
 .logout-container{
@@ -245,8 +275,8 @@ main{
 
 /* --------------------------------------------------Home */
 
-.home_container{
-  background-color: whitesmoke;
+.home-container{
+  background: radial-gradient(circle at 50% 50%, rgba(255, 193, 7, 1) 20%, rgba(156, 39, 176, 1) 80%);
   color: black;
 }
 
@@ -273,7 +303,6 @@ main{
   position: relative;
   width: 20.625rem;
   height: 31.25rem;
-  background-color: whitesmoke;
   border: none;
 }
 
