--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -68,7 +68,42 @@
       </div>
     </div>
   </main>
+  <footer class="footer py-3 text-center bg-primary">
+    <div class="container">
+      <div class="row">
+        <!-- Slogan -->
+        <div class="col-md-4">
+          <h4 class="logo text-danger fs1 fw-bolder">OnBook</h4>
+          <p>Rent your next book with us.</p>
+        </div>
 
+        <!-- Contact -->
+        <div class="col-md-4">
+          <h4>Contact</h4>
+          <ul class="list-unstyled ">
+            <li>Email: OnBook@example.com</li>
+            <li>Teléfono: +5 254 567 867</li>
+          </ul>
+        </div>
+
+        <!-- SSNN -->
+        <div class="col-md-4">
+          <h4>Social Network</h4>
+          <a href="https://wa.me/353899895252?text=Hi,%20nice%20to%20meet%20you." class="text-decoration-none social_icon me-2 whatsapp_icon">
+            <i class="bi-whatsapp"></i>
+          </a>
+          <a href="https://github.com/Pedrolivares1980?tab=repositories"
+            class="text-decoration-none social_icon me-2 github_icon">
+            <i class="bi-github"></i>
+          </a>
+          <a href="https://www.youtube.com/tuCanal" class="text-decoration-none social_icon me-2 youtube_icon">
+            <i class="bi-youtube"></i>
+          </a>
+        </div>
+
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
