--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -30,6 +30,7 @@
 <!-- Link to add a new comment to the post -->
 <div class="mt-3 mb-3">
   <a href="{% url 'add-comment' object.id %}" class="btn btn-primary ">Add Comment</a>
+  <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Back</button>
 </div>
 
 <!-- Display existing comments and their replies in a nested structure -->
@@ -42,5 +43,6 @@
   <h4 class="text-center">No comments yet, be the first to comment!</h4>
   {% endif %}
 </div>
+
 
 {% endblock content %}
