--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -30,11 +30,11 @@
     <nav class="navbar navbar-expand-md bg-primary fixed-top ">
       <div class="container-fluid text-white">
         <a class="navbar-brand mx-5  logo " href="{% url 'books_home' %}">OnBook</a>
-        <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
+        <button class="navbar-toggler bg-white text-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
           aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarToggle">
+        <div class="collapse navbar-collapse text-center" id="navbarToggle">
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link active  " aria-current="page" href="{% url 'books_home' %}">Home</a>
             <a class="nav-item nav-link " href="{% url 'books_about' %}">About</a>
@@ -93,7 +93,7 @@
       <div class="row">
         <!-- Slogan -->
         <div class="col-md-4">
-          <h4 class="logo text-danger fs1 fw-bolder">OnBook</h4>
+          <h4 class="logo fs1 fw-bolder">OnBook</h4>
           <p>Rent your next book with us.</p>
         </div>
 
