--- a/blog/templates/blog/post_form.html
+++ b/blog/templates/blog/post_form.html
@@ -5,12 +5,12 @@
         <form method="POST">
             {% csrf_token %}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Blog Post</legend>
+                <legend class="border-bottom mb-4 text-center">Blog Post</legend>
                 {{ form|crispy }}
             </fieldset>
-            <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Post</button>
-                <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Cancel</button>
+            <div class="form-group text-center">
+                <button class="btn btn-primary me-2" type="submit">Post</button>
+                <button class="btn btn-danger" type="button" onclick="history.back()">Cancel</button>
             </div>
         </form>
     </div>
